--- a/quiz/templates/quiz/solve_result.html
+++ b/quiz/templates/quiz/solve_result.html
@@ -1,4 +1,7 @@
-<p>도전자 {{ challenger.name }}</p>
+{% extends "quiz/base.html" %}
+{% block content %}
+<div class="container">
+    <p>도전자 {{ challenger.name }}</p>
     <p>점수 {{ challenger.result }} / 10</p>
 
     <a href="{% url 'quiz:quiz_home' %}">나의 우정 테스트 만들기</a>
@@ -7,3 +10,7 @@
     {% for chllngr in user.challenger_set.all %}
     <p>{{ chllngr.name }} {{chllngr.result}}</p>
     {% endfor %}
+</div>
+
+
+{% endblock %}
