--- a/quiz/templates/quiz/solve_result.html
+++ b/quiz/templates/quiz/solve_result.html
@@ -1,14 +1,32 @@
 {% extends "quiz/base.html" %}
 {% block content %}
-<div class="container">
-    <p>도전자 {{ challenger.name }}</p>
-    <p>점수 {{ challenger.result }} / 10</p>
-
-    <a href="{% url 'quiz:quiz_home' %}">나의 우정 테스트 만들기</a>
-
-    <p>누가 {{ user.name }}님을 가장 잘 알까요?</p>
-    {% for chllngr in user.challenger_set.all %}
-    <p>{{ chllngr.name }} {{chllngr.result}}</p>
-    {% endfor %}
+<div class="container pt-3">
+    <div class="card  bg-light">
+        <div class="card-body">
+            <h3 class="text-center card-title">나의 점수</h3>
+            <div class="circle-container">
+                <div class="circle">
+                        {{ challenger.result }}/10
+                </div>
+            </div>
+            <p class="text-center card-text"><strong>{{ text }}</strong></p>
+        </div>
+    </div>
+    <a href="{% url 'quiz:quiz_home' %}" ><button type="button" class="w-100 mt-2 btn btn-success">나의 우정 테스트 만들기</button></a>
+    <p class="pt-5"><strong>누가 {{ user.name }}님을 가장 잘 알까요?</strong></p>
+    <div class="card  bg-light">
+        <div class="card-body p-5">
+            {% for chllngr in user.challenger_set.all %}
+            <div class="d-flex justify-content-between">
+                <div class="d-inline-flex"><strong>{{ chllngr.name }}</strong></div>
+                <div class="d-inline-flex text-primary"><strong>{{chllngr.result}}</strong>/10</div>
+            </div>
+            <hr/>
+            {% endfor %}
+        </div>
+    </div>
 </div>
 {% endblock %}
+
+    
+    
