--- a/quiz/templates/quiz/solve_home.html
+++ b/quiz/templates/quiz/solve_home.html
@@ -4,20 +4,10 @@
 {% block content %}
 
 
-    <div class="container">
+<h1>{{user.name}}님 우정퀴즈!</h1>
+<form action="" method="get">
+    <p>이름 <input type="text" name="name"></p>
+    <p><input type="submit" value="시작하기"></p>
+</form>
 
-        <div class="card" style="background-color: white; margin-top: 20px; margin-bottom: 40px">
-            <div class="card-body">
-                <h5 class="card-title d-flex align-items-center d-flex justify-content-center"
-                    style="text-align: center; height:100px; ">👏🏻만들기 완료👏🏻<br> 친구들에게 공유하세요 </h5>
-                <p class="card-text" style="text-align: center">{{ user.quiz_url }}</p>
-                <button type="button" class="btn btn-success btn-lg btn-block">copy URL</button>
-            </div>
-        </div>
-        <h4 class="whos">
-            아직 테스트에 참여한 친구가 없습니다.<br>
-            링크를 공유해 보세요!
-        </h4>
-
-    </div>
 {% endblock %}
