--- a/quiz/templates/quiz/solve_result.html
+++ b/quiz/templates/quiz/solve_result.html
@@ -1,18 +1,22 @@
 {% extends "quiz/base.html" %}
 {% block content %}
 <div class="container pt-3">
-    <div class="card  bg-light">
+    <div class="card bg-light">
         <div class="card-body">
             <h3 class="text-center card-title">나의 점수</h3>
-            <div class="circle-container">
-                <div class="circle">
-                        {{ challenger.result }}/10
+            <div class="circle-container text-center d-flex justify-content-center m-1">
+                <div class="rounded-circle border-primary d-flex align-items-center justify-content-center"
+                    style="width:140px;height:140px;border:9px solid;">
+                    <div class="text-primary">
+                        <h3><strong>{{ challenger.result }}</strong>/10</h3>
+                    </div>
                 </div>
             </div>
-            <p class="text-center card-text"><strong>{{ text }}</strong></p>
+            <div class="text-center card-text m-3"><strong>{{ text }}</strong></div>
         </div>
     </div>
-    <a href="{% url 'quiz:quiz_home' %}" ><button type="button" class="w-100 mt-2 btn btn-success">나의 우정 테스트 만들기</button></a>
+    <a href="{% url 'quiz:quiz_home' %}"><button type="button" class="w-100 mt-2 p-3 btn btn-success">나의 우정 테스트
+            만들기</button></a>
     <p class="pt-5"><strong>누가 {{ user.name }}님을 가장 잘 알까요?</strong></p>
     <div class="card  bg-light">
         <div class="card-body p-5">
@@ -21,12 +25,9 @@
                 <div class="d-inline-flex"><strong>{{ chllngr.name }}</strong></div>
                 <div class="d-inline-flex text-primary"><strong>{{chllngr.result}}</strong>/10</div>
             </div>
-            <hr/>
+            <hr />
             {% endfor %}
         </div>
     </div>
 </div>
 {% endblock %}
-
-    
-    
