quiz_create 수정했떠염

--- a/quiz/templates/quiz/quiz_complete.html
+++ b/quiz/templates/quiz/quiz_complete.html
@@ -11,7 +11,7 @@
                 <h5 class="card-title d-flex align-items-center d-flex justify-content-center"
                     style="text-align: center; height:100px; ">👏🏻만들기 완료👏🏻<br> 친구들에게 공유하세요 </h5>
                 <p class="card-text" style="text-align: center">{{ user.quiz_url }}</p>
-                <button type="button" class="btn btn-success btn-lg btn-block">copy URL</button>
+                <button type="button" class="btn btn-lg btn-block" style="background-color: #33eea7; border: none; font-weight: bold;">copy URL</button>
             </div>
         </div>
         <h4 class="whos">
