진현이 수정했떠염

--- a/quiz/templates/quiz/quiz_home.html
+++ b/quiz/templates/quiz/quiz_home.html
@@ -38,7 +38,7 @@
     <div class="row">
         <a href="https://zepeto.me/?shortlink=dafa524e&pid=LINE-TIMELINE&c=App_Install&af_channel=LINE_TIMELINE&af_adset=JP_LINE_user&af_ad=Photobooth" class="downloadbtn col-12 text-center"
            style="border: 5px solid black; text-decoration: none;
-       color: black; font-weight: bold; height: 48px;">Donwload ZEPETO</a>
+       color: black; font-weight: bold; height: 48px; font-family: 'Righteous', cursive; font-size:20px;">Donwload ZEPETO</a>
     </div>
 </div>
 
