--- a/quiz/templates/quiz/solve_result.html
+++ b/quiz/templates/quiz/solve_result.html
@@ -15,7 +15,7 @@
             <div class="text-center card-text m-3"><strong>{{ text }}</strong></div>
         </div>
     </div>
-    <a href="{% url 'quiz:quiz_home' %}"><button type="button" class="w-100 mt-2 p-3 btn btn-success">나의 우정 테스트
+    <a href="{% url 'quiz:quiz_home' %}"><button type="button" class="w-100 mt-2 p-3 btn" style="background-color: #33eea7; border: none; font-weight: bold;">나의 우정 테스트
             만들기</button></a>
     <p class="pt-5"><strong>누가 {{ user.name }}님을 가장 잘 알까요?</strong></p>
     <div class="card  bg-light">
