--- a/quiz/templates/quiz/solve_home.html
+++ b/quiz/templates/quiz/solve_home.html
@@ -30,7 +30,7 @@
         </div>
 
         
-        <p><input type="submit" value="시작하기" class="btn btn-success btn-lg btn-block"></p>
+        <p><input type="submit" value="시작하기" class="btn btn-lg btn-block" style="background-color: #33eea7; border: none; font-weight: bold;"></p>
     </form>
 </div>
 {% endblock %}
