--- a/quiz/templates/quiz/solve_home.html
+++ b/quiz/templates/quiz/solve_home.html
@@ -24,7 +24,7 @@
         </div>
         <div class="d-flex align-items-center justify-content-center" style="background-color: white; margin-bottom: 20px; height: 150px">
             <div class="card-body">
-                    <div>이름 <input type="text" name="name" style="border:0px; width:80%;"></div>
+                    <div>이름 <input type="text" name="name" style="border:0px; width:80%; margin-left:10px;"></div>
                     <hr/>
             </div>
         </div>
