게이지 바 패딩 추가

--- a/quiz/templates/quiz/solve_quiz.html
+++ b/quiz/templates/quiz/solve_quiz.html
@@ -3,7 +3,7 @@
 {% block content %}
 <body>
 <div class="progress" style="height: 40px; padding:10px auto; margin-top: 10px;" >
-  <div class="progress-bar text-left" id="progress" role="progressbar" style="width: {{ bar }}%; background-color: #b19aff;
+  <div class="progress-bar text-left pl-2" id="progress" role="progressbar" style="width: {{ bar }}%; background-color: #b19aff;
     color: black; font-size: 15px;" aria-valuenow="{{ bar }}" aria-valuemin="0" aria-valuemax="100">{{ quiz.id }}/10</div>
 </div>
 
