문제 푼 인원수 출력

--- a/quiz/templates/quiz/solve_home.html
+++ b/quiz/templates/quiz/solve_home.html
@@ -18,7 +18,7 @@
                     {{ user.name }}님<br>
                     우정퀴즈!<br></h5>
                 <h5 class="card-title d-flex align-items-center"
-                    style="text-align: left; height:20px; font-size: 13px; line-height: 26px; color: white;">0명이 참여했습니다
+                    style="text-align: left; height:20px; font-size: 13px; line-height: 26px; color: white;">{{ user.challenger_set.count }}명이 참여했습니다
                 </h5>
             </div>
         </div>
